--- a/configs/regions.yaml
+++ b/configs/regions.yaml
@@ -3,24 +3,25 @@
 
 regions:
   "1b:SR":
-    description: "Signal region, 1 b-tag category"
+    description: "Signal region, 1 b-tag category (paper: 1 b-tag, up to 1 additional jet)"
     cuts:
       Nbjets: "==1"
-      Njets: "<=2"           # veto third jet
+      Njets: "<=2"
       Nleptons: "==0"
       Ntaus: "==0"
-      MET: ">50"             # Relaxed from 250
-      DeltaPhi: ">0.1"       # Relaxed from 0.5
+      MET: ">250"
+      DeltaPhi: ">0.5"
 
   "2b:SR":
-    description: "Signal region, 2 b-tag category"
+    description: "Signal region, 2 b-tag category (paper: 2 b-tags, up to 1 additional jet)"
     cuts:
       Nbjets: "==2"
-      Njets: "==3"           # exactly three jets
+      Njets: "<=3"
+      NjetsMin: ">=2"
       Nleptons: "==0"
       Ntaus: "==0"
-      MET: ">50"             # Relaxed from 250
-      DeltaPhi: ">0.1"       # Relaxed from 0.5
+      MET: ">250"
+      DeltaPhi: ">0.5"
 
   "1b:CR_Wlnu_mu":
     description: "W+jets control region in 1b category (muon)"
@@ -64,43 +65,43 @@ regions:
       Njets: ">=3"
 
   "1b:CR_Zll_mu":
-    description: "Z+jets CR (1b definition) muon channel"
+    description: "Z+jets CR (1b) muon: 2 OS muons, leading tight pt>30, subleading loose pt>10"
     cuts:
-      Nmuons: "==2"
-      Nelectrons: "==0"
-      Recoil: ">250"
+      NmuonsZ: "==2"
+      NelectronsZ: "==0"
+      RecoilZ: ">250"
       MllMin: ">70"
       MllMax: "<110"
       Njets: "<=2"
       Jet1Pt: ">100"
   "1b:CR_Zll_el":
-    description: "Z+jets CR (1b definition) electron channel"
+    description: "Z+jets CR (1b) electron: 2 OS electrons, leading tight pt>30, subleading loose pt>10"
     cuts:
-      Nelectrons: "==2"
-      Nmuons: "==0"
-      Recoil: ">250"
+      NelectronsZ: "==2"
+      NmuonsZ: "==0"
+      RecoilZ: ">250"
       MllMin: ">70"
       MllMax: "<110"
       Njets: "<=2"
       Jet1Pt: ">100"
 
   "2b:CR_Zll_mu":
-    description: "Z+jets CR (2b definition) muon channel"
+    description: "Z+jets CR (2b) muon: 2 OS muons, leading tight pt>30, subleading loose pt>10"
     cuts:
-      Nmuons: "==2"
-      Nelectrons: "==0"
-      Recoil: ">250"
+      NmuonsZ: "==2"
+      NelectronsZ: "==0"
+      RecoilZ: ">250"
       MllMin: ">70"
       MllMax: "<110"
       Njets: "<=3"
       NjetsMin: ">1"
       Jet1Pt: ">100"
   "2b:CR_Zll_el":
-    description: "Z+jets CR (2b definition) electron channel"
+    description: "Z+jets CR (2b) electron: 2 OS electrons, leading tight pt>30, subleading loose pt>10"
     cuts:
-      Nelectrons: "==2"
-      Nmuons: "==0"
-      Recoil: ">250"
+      NelectronsZ: "==2"
+      NmuonsZ: "==0"
+      RecoilZ: ">250"
       MllMin: ">70"
       MllMax: "<110"
       Njets: "<=3"
