--- a/configs/2022.yaml
+++ b/configs/2022.yaml
@@ -86,10 +86,10 @@ event_selection:
   min_electrons: 0
   max_electrons: 2
   min_taus: 0
-  max_taus: 2
+  max_taus: 0
   min_jets: 1        # paper: >= 1 jet
   min_bjets: 1
-  met_min: 250.0    # paper: pTmiss > 250 GeV
+  met_min: 250.0    # event passes if MET > 250 GeV or Recoil > 250 GeV
   jet1_pt_min: 100.0   # paper: leading jet pT > 100 GeV
   delta_phi_min: 0.5   # paper: min DeltaPhi(jet, pTmiss) > 0.5
 
